force-app/main/default/objects/Executive_Summary__c/Executive_Summary__c.object-meta.xml
<CustomObject>
    <label>Executive Summary</label>
    <nameField>
        <displayFormat>ES-{00000}</displayFormat>
        <label>Executive Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>