force-app/main/default/objects/Executive_Summary__c/fields/Executive_Summary_fld__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary_fld__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executive Summary</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>