force-app/main/default/objects/Executive_Summary__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market statistics</fullName>
            </value>
            <value>
                <fullName>Competitive landscape</fullName>
            </value>
            <value>
                <fullName>Account statistics and implications</fullName>
            </value>
            <value>
                <fullName>Surgeon / Hospital Alignment trends update</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Processes</fullName>
            </value>
            <value>
                <fullName>Overall Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>