force-app/main/default/objects/Executive_Summary__c/fields/Sub_Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Question_Type__c</fullName>
    <label>Sub Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geographical considerations:</fullName>
            </value>
            <value>
                <fullName>Pricing:</fullName>
            </value>
            <value>
                <fullName>Teaching institutions residents and fellows:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>